--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -19,7 +19,9 @@ add_library( # Sets the name of the library.
              SHARED
              # Provides a relative path to your source file(s).
              main.cpp
-             HelloTrigle.cpp)
+             IExe.cpp
+             HelloTrigle.cpp
+             )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
