--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library( # Sets the name of the library.
              main.cpp
              IExe.cpp
              HelloTrigle.cpp
+             VertexDemo.cpp
              )
 
 # Searches for a specified prebuilt library and stores the path as a
