use vbo to draw a line and a triangle

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library( # Sets the name of the library.
              HelloTrigle.cpp
              VertexDemo.cpp
              VertexShow.cpp
+             VboShow.cpp
              )
 
 add_library( test-lib
