--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -25,12 +25,14 @@ add_library( # Sets the name of the library.
              VertexShow.cpp
              VboShow.cpp
              VaoInstance.cpp
+             ElemDraw.cpp
+             Texture.cpp
              )
 
-add_library( test-lib
-             SHARED
-             test.cpp
-             )
+#add_library( test-lib
+#             SHARED
+#             test.cpp
+#             )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -50,7 +52,7 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
                        native-lib
-                       test-lib
+                       #test-lib
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib}
